styles/style.scss
@import "./variables.scss";
@import "./utilities.scss";
@import "./nav.scss";
@import "./subscribe.scss";
@import "./sponsors.scss";
@import "./footer.scss";
@import "./tito.scss";
@import "./intro.scss";

@font-face {
  font-family: "Finlandica";
  src: url("../assets/fonts/finlandica-regular.eot");
  src: url("../assets/fonts/finlandica-regular.eot?#iefix")
      format("embedded-opentype"),
    url("../assets/fonts/finlandica-regular.woff2") format("woff2"),
    url("../assets/fonts/finlandica-regular.woff") format("woff"),
    url("../assets/fonts/finlandica-regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Finlandica";
  src: url("../assets/fonts/finlandica-bold.eot");
  src: url("../assets/fonts/finlandica-bold.eot?#iefix")
      format("embedded-opentype"),
    url("../assets/fonts/finlandica-bold.woff2") format("woff2"),
    url("../assets/fonts/finlandica-bold.woff") format("woff"),
    url("../assets/fonts/finlandica-bold.ttf") format("truetype");
  font-weight: bold;
  font-style: normal;
}

@keyframes waveX {
  0% {
    background-position-x: 100%, 0;
  }
  100% {
    background-position-x: 100%, $header-background-size;
  }
}
@keyframes waveY {
  100% {
    background-position-y: 100%, 0;
  }
  0% {
    background-position-y: 100%, $header-background-size;
  }
}

* {
  box-sizing: border-box;
}

body {
  font: 14pt/1.5 $fh, sans-serif;
  background-color: white;
}

main {
  overflow: hidden; // Do not let bleeding images create horizontal scroll
}

a {
  color: $very-blue;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $fh;
  margin-top: $pu * 8;
  margin-bottom: $pu2;
  line-height: 1.25;
}

h2 {
  font-size: 2em;
}

h3 {
  margin-top: $pu * 6;
  font-size: 1.25em;
}

h4 {
  margin-top: $pu * 4;
}

.heading {
  @extend .grid--5col;
  &--anchor-select {
    visibility: hidden;
    padding-left: $pu;
    text-decoration: none;
    color: #ccc;
    border-bottom: $pu solid $rf-light-blue;
  }

  &:hover &--anchor-select {
    visibility: visible;
  }
}

blockquote {
  padding: $pu2;
  margin: $pu * 3;
  border: 1px solid #dae4e9;
  font-size: smaller;

  p:last-child {
    margin: 0;
  }

  &.tip {
    color: #696969;
    background-color: #f5fffb;
  }

  &.warning {
    color: #696969;
    font-size: medium;
    background-color: #fffffa;
  }
}

.photo {
  border-radius: 100%;
}

.photo,
.sponsors--logo {
  transition: transform 0.2s ease-in-out;
  &:hover {
    transform: scale(1.05);
  }
}

figure {
  margin: 0;
}

dl {
  position: relative;
}

dt {
  margin-bottom: 0.5em;
  font-size: smaller;

  @media (min-width: $mobile-breakpoint) {
    position: absolute;
    left: -130px;
    line-height: 2rem;

    &::after {
      position: absolute;
      top: 0.75em;
      left: 106px;
      height: 10px;
      width: 10px;
      border-radius: 50%;
      background-color: #ddd;
      box-shadow: 0 0 0 2px #fff;
      content: "";
      z-index: 1;
    }
  }
}

dd {
  position: relative;
  margin: 0;
  @media (min-width: $mobile-breakpoint) {
    &::after {
      position: absolute;
      top: 0;
      left: -20px;
      height: 100%;
      width: 2px;
      background-color: #ddd;
      content: "";
    }
  }
}
dd {
  h3 {
    margin-top: 0;
    margin-bottom: 0;
  }
  p {
    margin-top: 0;
    margin-bottom: $pu2;
  }
}

address {
  font-style: normal;
}

.grid {
  display: grid;
  grid-gap: 20px;
  grid-row-gap: 0;

  &_6col {
    grid-template-columns: repeat(6, 1fr);
    @media (max-width: $mobile-breakpoint) {
      grid-auto-columns: 100%;
    }
  }

  &--full {
    grid-column: 1 / span 6;
  }
  &--5col {
    grid-column: 2 / span 5;
  }
}

.header {
  margin: 0;
  padding: 0;
  color: #f3f7f9;
  background-image: linear-gradient(
      rgba(0, 81, 80, 0.95),
      rgba($color-accent, 0.99)
    ),
    url("../assets/img/headers/front.svg");
  background-size: 100% 100%, $header-background-size $header-background-size;
  font-family: $fh;
  //The animation is too slow so it's disabled unless we can find a performant way to do it
  // Enable animation only when hovering header
  animation: waveX 10s linear infinite, waveY 10s linear infinite;
  animation-play-state: paused;

  &:hover {
    animation-play-state: running;
  }

  &--container {
    padding-top: $pu * 3;
    padding-bottom: $pu * 8;
    margin: auto;
    align-items: center;
  }
  &--tagline {
    grid-column: 2 / span 3;
    grid-row: 3;
    margin: 0;
    padding: 0;
    font-size: xx-large;
    @media (max-width: $mobile-breakpoint) {
      grid-column: 2 / span 5;
    }
  }
  &--dates {
    font-size: xx-large;
    grid-column: 5 / span 2;
    @media (max-width: $mobile-breakpoint) {
      grid-column: 2 / span 5;
    }
  }
  &--date {
    font-size: larger;
  }
  &--location {
  }
  &--buy {
    grid-column: 5 / span 2;
    @media (max-width: $mobile-breakpoint) {
      grid-column: 2 / span 5;
    }
  }
  &--pageTitle {
    grid-column: 2 / span 4;
    margin: 0;
    padding: 0;
    font-size: 3em;
  }
}

.logo {
  display: flex;
  margin: 0;
  padding: 0;
  font-weight: bold;

  &--image {
    display: block;
    margin-right: 10px;
  }

  &--title {
    margin-top: 0.25em;
    font-size: 1.25em;
    font-weight: bold;
    line-height: 1.125;
  }

  &--text {
    display: block;
    color: #fff;
  }
}

.header {
  &--logo {
    grid-column: 1 / span 1;
    grid-row: 1;
    align-self: start;
    justify-self: end;
  }
  .logo {
    &--image {
      margin: 0;
      width: 80px;
      height: 80px;
      @media (max-width: $mobile-breakpoint) {
        width: 40px;
        height: 40px;
      }
    }
    &--title {
      display: none;
    }
  }
  &_index {
    .header--container {
      grid-row-gap: 20px;
      padding-top: $pu * 8;
    }
    .header--logo {
      grid-column: span 4;
      grid-row: 2;
      justify-self: start;
    }
    .logo {
      &--image {
        width: auto;
        height: auto;
        margin-right: 12px;
      }
      &--title {
        display: block;
      }
    }
  }
}

.react-image {
  margin: $pu;
  width: 100px;
  height: 100px;
  float: right;
}

.flex {
  display: flex;
}

.contact {
  position: relative;
  margin-bottom: $pu2;

  &--photo {
    position: absolute;
    left: -120px;
    @media (max-width: $mobile-breakpoint) {
      left: -60px;
      width: 50px;
      height: 50px;
    }
  }

  &--country {
    display: inline;
    margin-left: $pu2;

    span {
      width: $pu2 * 2 !important; // XXX
      height: $pu2 * 2 !important; // XXX
      border-radius: 100%;
      background-size: cover !important; // XXX
    }
  }

  .social {
  }
}

.session {
  padding-bottom: $pu2 * 4;
}

.speaker-name {
  &--photo {
    display: inline-block;
    margin-right: $pu;
    vertical-align: bottom;
  }
}

.keywords {
  margin: 0;
  padding: 0;
  font-size: smaller;
  list-style: none;
}

.keyword {
  display: inline;
  color: #999;
  margin-right: $pu * 3;
}
.keyword:first-child {
  margin-left: 0;
}

.contact-mini {
  width: 100px;
  margin: $pu * 5;
  text-align: center;
  display: inline-block;
  vertical-align: top;
}

.speakers {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  .contact-mini {
    text-align: center;
    width: 150px;
    margin: $pu * 4 0;
  }
}

@media (max-width: $mobile-breakpoint) {
  .nav--link,
  .nav__selected__link {
    letter-spacing: 0;
  }
}

.buy {
  margin-top: $pu * 8;
}

.buy-button {
  padding: $pu * 3 $pu * 5;
  border-radius: 100px;
  background-color: white;
  color: darken($rf-blue, 30%);
  text-decoration: none;
  font-weight: bold;
  font-size: larger;
  &:hover {
    color: darken($rf-blue, 50%);
    background-color: rgba(255, 255, 255, 0.85);
  }
}

.speaker-photos {
  display: inline;
}

th,
td {
  padding: $pu2 0;
}
/* https://codepen.io/AllThingsSmitty/pen/MyqmdM */
@media (max-width: $mobile-breakpoint) {
  table {
    border: 0;
  }
  table caption {
    font-size: 1.3em;
  }
  table thead {
    border: none;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
  }
  table tr {
    border-bottom: 3px solid #ddd;
    display: block;
    margin-bottom: 0.625em;
  }
  table td {
    border-bottom: 1px solid #ddd;
    display: block;
    font-size: 0.8em;
    text-align: left;
  }
  table td:before {
    /*
      * aria-label has no advantage, it won't be read inside a table
      content: attr(aria-label);
      */
    content: attr(data-label);
    float: left;
    font-weight: bold;
    text-transform: uppercase;
  }
  table td:last-child {
    border-bottom: 0;
  }
}
table thead th:not(:first-child) {
  min-width: 100px;
  text-align: left;
}

.organizers {
  display: flex;
  flex-wrap: wrap;
}

.organizer {
  $size: 140px;
  flex-basis: 25%;
  text-align: center;
  margin-bottom: 1em;
  width: $size;

  &--photo {
    display: block;
    margin: 0 auto $pu auto;
    width: $size;
    height: $size;
    filter: saturate(0);
  }

  &--name {
    font-weight: bold;
    font-size: large;
  }

  @media (max-width: $mobile-breakpoint) {
    flex-basis: 50%;
  }
}

.venue--location {
  max-width: 100%;
}

.countdown--container {
  grid-column: 5 / span 2;

  .countdown--header {
    margin-top: 0;
  }

  .countdown--item {
    display: inline;
    margin-right: 0.5em;
  }
}

#schedule {
  .legend {
    &--label {
      margin-right: 1.5em;
      display: inline-block;
    }
    &--title {
      white-space: nowrap;
    }
  }
  .icon-abbr {
    margin-right: 0.25em;
  }
}

.schedule {
  position: relative;

  &--title {
    margin-bottom: 0.5em;
    font-size: smaller;

    @media (min-width: $mobile-breakpoint) {
      position: absolute;
      left: -130px;
      line-height: 2rem;

      &::after {
        position: absolute;
        top: 0.75em;
        left: 106px;
        height: 10px;
        width: 10px;
        border-radius: 50%;
        background-color: #ddd;
        box-shadow: 0 0 0 2px #fff;
        content: "";
        z-index: 1;
      }
    }
    &.workshop::after,
    &.keynote::after,
    &.panel::after,
    &.talk::after {
      background-color: $color-accent;
    }
    &.breakfast::after,
    &.lunch::after,
    &.coffee_break::after {
      background-color: brown;
    }
    &.lightning_talk::after {
      background-color: yellow;
    }
    &.party::after,
    &.organizational::after {
      background-color: blue;
    }
  }

  &--definition {
    position: relative;
    margin: 0;

    h3 {
      margin-top: 0;
      margin-bottom: 0.5em;
    }
    h4 {
      margin-top: 0;
      margin-bottom: 0;
    }
    p {
      margin-top: 0;
      margin-bottom: $pu2;
    }
  }

  abbr {
    margin-right: 0.5em;
  }
}

